regression/parse_pool/progtest8.sfp.out

sfc in program parse_pool/progtest8.sfp
syntax error at line 3, position 23:
event-condition bar { network = 8192 TYPE_SECOND }
                      ^
